# python-project-52

./: .codeclimate.yml  .coverage  .coveragerc  .env  .gitignore  Makefile  Procfile  README.md  coverage.xml  db.sqlite3  dumpdata.json  dumpdata1.json  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
fixtures/: statusdata.json  tagdata.json  taskdata.json  userdata.json
task_manager/: form_class.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_options_alter_label_created_at_and_more.py  0004_alter_label_created_at.py
task_manager/mixins/: login_mixin.py  mixins.py  object_crud_mixins.py
task_manager/statuses/: forms.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_alter_status_users.py  0003_remove_status_users.py
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/task_manager/templates/: index.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_creator.py  0002_initial.py  0002_tasklabel_task_labels.py  0003_alter_task_creator.py  0004_alter_task_creator.py  0005_alter_task_created_at_alter_task_creator_and_more.py  0006_alter_task_created_at_alter_task_creator_and_more.py  (+8 more)
task_manager/templates/: base.html  index.html  login.html  registration.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
test_mixins/: test_crud_classes.py  test_form_classes.py
tests/: test_crud_classes.py
(+26 files in other folders)
