[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vladislav25 <vladkhleborodov@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"
django-admin = "^2.0.2"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
